Try to tweak the sidebar hoping that this will fix the overflowing element issue

--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar{
     background-color: $alabaster;
     width: 15%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     top: 0;    
     display: flex;
